--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 <body>
     <h1>Sveiciens</h1>
     <p>Piemērs git lietošanai no VS code</p>
+    <hr/>
+
+    <p>Programmatūra</p>
+    <ol>
+        <li>git</li>
+        <li>GitHub Desktop</li>
+        <li>VS Code</li>
+    </ol>
 </body>
 </html>
